more Java 8 friendliness, mostly toList() -> collect(Collectors.toList())