@@ -42,6 +42,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * {@link RomHandler} for Gold, Silver, Crystal.
@@ -836,7 +837,7 @@ public class Gen2RomHandler extends AbstractGBCRomHandler {
     public List<EncounterArea> getSortedEncounters(boolean useTimeOfDay) {
         return getEncounters(useTimeOfDay).stream()
                 .sorted(Comparator.comparingInt(a -> Gen2Constants.locationTagsTraverseOrder.indexOf(a.getLocationTag())))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
